update dropdown search

--- a/store.html
+++ b/store.html
@@ -110,6 +110,51 @@
                 >
                   <i class="fa fa-search"></i></button
               ></span>
+
+              <div class="dropdown-list">
+                <div class="dropdown-item">
+                  <div class="dropdown-icon">
+                    <img src="images/1737172641.png" />
+                  </div>
+                  <div class="dropdown-texts">
+                    <div class="main-text">Login TW có hoặc Không có 2FA</div>
+                    <div class="sub-text">Automation Crypto</div>
+                  </div>
+                </div>
+
+                <div class="dropdown-item">
+                  <div class="dropdown-icon">
+                    <img src="images/1737172641.png" />
+                  </div>
+                  <div class="dropdown-texts">
+                    <div class="main-text">Làm Bánh Có Kiểm Soát</div>
+                  </div>
+                </div>
+
+                <div class="dropdown-item">
+                  <div class="dropdown-icon">
+                    <img src="images/1737172641.png" />
+                  </div>
+                  <div class="dropdown-texts">
+                    <div class="main-text">
+                      Kết bạn theo danh sách có sẵn theo Excel
+                    </div>
+                    <div class="sub-text">An</div>
+                  </div>
+                </div>
+
+                <div class="dropdown-item">
+                  <div class="dropdown-icon">
+                    <img src="images/1737172641.png" />
+                  </div>
+                  <div class="dropdown-texts">
+                    <div class="main-text">
+                      Auto add friends theo UID có sẵn - Định Trần
+                    </div>
+                    <div class="sub-text">Scipt MMO</div>
+                  </div>
+                </div>
+              </div>
             </div>
           </form>
         </div>
