--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
       name="twitter:image"
       content="https://app.gpmautomate.com/assets/img/logo_gpm.png"
     />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   <body>
     <header>
@@ -99,12 +100,9 @@
           <form method="get" class="flex-fill">
             <div class="input-group">
               <input
-                name="keyword"
+                id="findAppOrSeller"
                 class="form-control border rounded-pill"
-                type="text"
-                id="search"
                 placeholder="Tìm kiếm tên app hoặc seller"
-                value=""
               /><span class="input-group-append searchIcon"
                 ><button
                   class="btn"
@@ -114,50 +112,7 @@
                   <i class="fa fa-search"></i></button
               ></span>
 
-              <div class="dropdown-list">
-                <div class="dropdown-item">
-                  <div class="dropdown-icon">
-                    <img src="images/1737172641.png" />
-                  </div>
-                  <div class="dropdown-texts">
-                    <div class="main-text">Login TW có hoặc Không có 2FA</div>
-                    <div class="sub-text">Automation Crypto</div>
-                  </div>
-                </div>
-
-                <div class="dropdown-item">
-                  <div class="dropdown-icon">
-                    <img src="images/1737172641.png" />
-                  </div>
-                  <div class="dropdown-texts">
-                    <div class="main-text">Làm Bánh Có Kiểm Soát</div>
-                  </div>
-                </div>
-
-                <div class="dropdown-item">
-                  <div class="dropdown-icon">
-                    <img src="images/1737172641.png" />
-                  </div>
-                  <div class="dropdown-texts">
-                    <div class="main-text">
-                      Kết bạn theo danh sách có sẵn theo Excel
-                    </div>
-                    <div class="sub-text">An</div>
-                  </div>
-                </div>
-
-                <div class="dropdown-item">
-                  <div class="dropdown-icon">
-                    <img src="images/1737172641.png" />
-                  </div>
-                  <div class="dropdown-texts">
-                    <div class="main-text">
-                      Auto add friends theo UID có sẵn - Định Trần
-                    </div>
-                    <div class="sub-text">Scipt MMO</div>
-                  </div>
-                </div>
-              </div>
+              <div class="dropdown-list" id="resultDropdownList"></div>
             </div>
           </form>
         </div>
@@ -917,44 +872,56 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/thirdparty/OwlCarousel2-2.3.4/dist/owl.carousel.min.js"></script>
     <script>
+      const mockData = [
+        {
+          name: "Login TW có hoặc Không có 2FA",
+          category: "Automation Crypto",
+          imgUrl: "images/1737172641.png",
+        },
+        {
+          name: "Làm Bánh Có Kiểm Soát",
+          category: "Kiểm Soát",
+          imgUrl: "images/1737172641.png",
+        },
+        {
+          name: "Kết bạn theo danh sách có sẵn theo Excel",
+          category: "An",
+          imgUrl: "images/1737172641.png",
+        },
+        {
+          name: "Auto add friends theo UID có sẵn - Định Trần",
+          category: "Scipt MMO",
+          imgUrl: "images/1737172641.png",
+        },
+      ];
+
       $(document).ready(function () {
-        const tooltipTriggerList = document.querySelectorAll(
-          '[data-bs-toggle="tooltip"]'
-        );
-        const tooltipList = [...tooltipTriggerList].map(
-          (tooltipTriggerEl) => new bootstrap.Tooltip(tooltipTriggerEl)
-        );
+        $("#findAppOrSeller").on("input", function () {
+          const keyword = $(this).val().toLowerCase().trim();
+          const resultDropdownList = $("#resultDropdownList");
 
-        $(".owl-carousel").owlCarousel({
-          loop: true,
-          margin: 10,
-          nav: true,
-          responsive: {
-            0: {
-              items: 1,
-            },
-            600: {
-              items: 3,
-            },
-            1000: {
-              items: 5,
-            },
-          },
-        });
+          resultDropdownList.empty(); // Clear previous
 
-        $("a").click(function (e) {
-          $(".loadingProgressContainer").css("width", "100vw");
-        });
+          if (keyword === "") return;
 
-        $(window).on("beforeunload", function () {
-          $(".loadingProgressContainer").css("width", "100vw");
-        });
-        $(".loadingProgressContainer").css("width", "0");
-
-        $('button[type="submit"]').click(function () {
-          $('button[type="submit"]').html(
-            '<span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>'
+          const filtered = mockData.filter((item) =>
+            item.name.toLowerCase().includes(keyword)
           );
+
+          filtered.forEach((item) => {
+            const html = `
+         <div class="dropdown-item">
+                  <div class="dropdown-icon">
+                    <img src="${item.imgUrl}" />
+                  </div>
+                  <div class="dropdown-texts">
+                    <div class="main-text">${item.name}</div>
+                    <div class="sub-text">${item.category}</div>
+                  </div>
+                </div>
+      `;
+            resultDropdownList.append(html);
+          });
         });
       });
     </script>
