--- a/product.html
+++ b/product.html
@@ -61,6 +61,7 @@
     <meta property="twitter:title" content="" />
     <meta property="twitter:description" content="Check tình trạng telegram" />
     <meta property="twitter:image" content="images/1730986046.png" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   <body>
     <header>
@@ -79,12 +80,9 @@
           <form method="get" class="flex-fill">
             <div class="input-group">
               <input
-                name="keyword"
+                id="findAppOrSeller"
                 class="form-control border rounded-pill"
-                type="text"
-                id="search"
                 placeholder="Tìm kiếm tên app hoặc seller"
-                value=""
               /><span class="input-group-append searchIcon"
                 ><button
                   class="btn"
@@ -93,51 +91,7 @@
                 >
                   <i class="fa fa-search"></i></button
               ></span>
-
-              <div class="dropdown-list">
-                <div class="dropdown-item">
-                  <div class="dropdown-icon">
-                    <img src="images/1737172641.png" />
-                  </div>
-                  <div class="dropdown-texts">
-                    <div class="main-text">Login TW có hoặc Không có 2FA</div>
-                    <div class="sub-text">Automation Crypto</div>
-                  </div>
-                </div>
-
-                <div class="dropdown-item">
-                  <div class="dropdown-icon">
-                    <img src="images/1737172641.png" />
-                  </div>
-                  <div class="dropdown-texts">
-                    <div class="main-text">Làm Bánh Có Kiểm Soát</div>
-                  </div>
-                </div>
-
-                <div class="dropdown-item">
-                  <div class="dropdown-icon">
-                    <img src="images/1737172641.png" />
-                  </div>
-                  <div class="dropdown-texts">
-                    <div class="main-text">
-                      Kết bạn theo danh sách có sẵn theo Excel
-                    </div>
-                    <div class="sub-text">An</div>
-                  </div>
-                </div>
-
-                <div class="dropdown-item">
-                  <div class="dropdown-icon">
-                    <img src="images/1737172641.png" />
-                  </div>
-                  <div class="dropdown-texts">
-                    <div class="main-text">
-                      Auto add friends theo UID có sẵn - Định Trần
-                    </div>
-                    <div class="sub-text">Scipt MMO</div>
-                  </div>
-                </div>
-              </div>
+              <div class="dropdown-list" id="resultDropdownList"></div>
             </div>
           </form>
         </div>
@@ -1376,6 +1330,60 @@
           $('button[type="submit"]').html(
             '<span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>'
           );
+        });
+      });
+    </script>
+    <script>
+      const mockData = [
+        {
+          name: "Login TW có hoặc Không có 2FA",
+          category: "Automation Crypto",
+          imgUrl: "images/1737172641.png",
+        },
+        {
+          name: "Làm Bánh Có Kiểm Soát",
+          category: "Kiểm Soát",
+          imgUrl: "images/1737172641.png",
+        },
+        {
+          name: "Kết bạn theo danh sách có sẵn theo Excel",
+          category: "An",
+          imgUrl: "images/1737172641.png",
+        },
+        {
+          name: "Auto add friends theo UID có sẵn - Định Trần",
+          category: "Scipt MMO",
+          imgUrl: "images/1737172641.png",
+        },
+      ];
+
+      $(document).ready(function () {
+        $("#findAppOrSeller").on("input", function () {
+          const keyword = $(this).val().toLowerCase().trim();
+          const resultDropdownList = $("#resultDropdownList");
+
+          resultDropdownList.empty(); // Clear previous
+
+          if (keyword === "") return;
+
+          const filtered = mockData.filter((item) =>
+            item.name.toLowerCase().includes(keyword)
+          );
+
+          filtered.forEach((item) => {
+            const html = `
+         <div class="dropdown-item">
+                  <div class="dropdown-icon">
+                    <img src="${item.imgUrl}" />
+                  </div>
+                  <div class="dropdown-texts">
+                    <div class="main-text">${item.name}</div>
+                    <div class="sub-text">${item.category}</div>
+                  </div>
+                </div>
+      `;
+            resultDropdownList.append(html);
+          });
         });
       });
     </script>
