--- a/product.html
+++ b/product.html
@@ -67,14 +67,16 @@
     <header>
       <div class="loadingProgressContainer" style="width: 0px"></div>
       <div class="container">
-        <div class="logo d-none d-sm-none d-md-block">
-          <a href="/"
-            ><img
-              loading="lazy"
-              src="https://app.gpmautomate.com/assets/img/header-logo.png"
-              alt="GPM AppStore"
-              style="max-height: 30px"
-          /></a>
+        <div class="logo-wrapper">
+          <div class="logo d-none d-sm-none d-md-block">
+            <a href="/"
+              ><img
+                loading="lazy"
+                src="https://app.gpmautomate.com/assets/img/header-logo.png"
+                alt="GPM AppStore"
+                style="max-height: 30px"
+            /></a>
+          </div>
         </div>
         <div class="searchBox d-flex">
           <form method="get" class="flex-fill">
